Fix wrapping of header when exceeding container

--- a/res/style.scss
+++ b/res/style.scss
@@ -87,6 +87,9 @@
         padding-top: 20px;
         padding-bottom:20px;
         line-height: 1.25;
+        display: flex;
+        flex-direction: row;
+
 
         & .title {
             font-size: 130%;
@@ -98,12 +101,13 @@
             pointer-events: none;
             font-style: italic;
         }
+
+        & .vote {
+            float: none;
+            margin-right: 10px;
+        }
     }
 
-    & .info {
-        display: inline-block;
-        margin-left: 15px;
-    }
 
     & .tagline {
         font-size: x-small;
@@ -266,6 +270,11 @@
             & .at_commentcontent {
                 display: none;
             }
+        }
+
+        & .info {
+            display: inline-block;
+            margin-left: 15px;
         }
     }
 
